# Plotline

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  HANDOFF.md  HANDOFF_NEXT_AI.md  README.md  eslint.config.js  index.html  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  交接文档.md  产品需求与设计文档.md  更新日志.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  COMPETITOR_RESEARCH.md  DATA_MODEL.md  DECISIONS.md  ROADMAP.md  TESTING.md  v2.6.1-community-research.md  v2.6.1-ui-audit.md  v2.7.0-research-community.md  v2.7.0-research-competitors.md  v2.7.0-research.md  v2.7.1-research.md  v2.7.2-research.md  产品路线图.md  前端优化指南.md  审计报告-v2.5.4.md  密钥管理指南.md  市场调研报告-v2.6.0.md  开发计划-v2.6.0.md  技术决策.md  插件说明.md  文档索引.md  架构设计.md
docs/archives/: ISSUE_AUDIT_v1.5.md
scripts/: generate-icons.mjs  generate-icons.test.ts  generate-provider-icons.py  release-v1.ps1  render-icon.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: generate_icons.py  icon.icns
src-tauri/migrations/: 001_initial.sql  002_map_and_vn.sql  003_font_theme.sql  004_ai_assistant.sql  005_vn_assets.sql  006_ai_system_prompt.sql  007_workspace_updated_at_triggers.sql  008_event_location.sql  009_workspace_cover_image.sql  010_outline_cover_image.sql  011_event_images.sql  012_novel_chapters.sql  013_vn_sprites.sql  014_reduce_motion.sql  015_ai_cache.sql  016_ai_cache_invalidation_triggers.sql
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: ai.rs  character.rs  event.rs  export.rs  location.rs  mod.rs  note.rs  novel.rs  outline.rs  settings.rs  statistics.rs  track.rs  vn.rs  workspace.rs
src-tauri/src/db/: connection.rs  migrate.rs  mod.rs
src-tauri/src/models/: ai.rs  character.rs  event.rs  location.rs  mod.rs  note.rs  novel.rs  outline.rs  settings.rs  track.rs  vn.rs  workspace.rs
src-tauri/src/services/: ai.rs  ai_prompts.rs  backup.rs  character.rs  consistency.rs  event.rs  export.rs  location.rs  mod.rs  note.rs  novel.rs  outline.rs  settings.rs  statistics.rs  track.rs  vn.rs  workspace.rs
(+263 files in other folders)
