[package]
name = "plotline"
version = "0.1.0"
description = "本地优先的叙事创作工作台"
authors = ["Plotline Contributors"]
license = "MIT"
repository = "https://github.com/YJLZSL/Plotline"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1" }

[dependencies]
tauri = { version = "2.11.1" }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
log = "0.4"
dirs = "5.0"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
